hphp/hack/test/typecheck/readonly/nested_prop_multifile.php.exp
File "nested_prop_multifile.php", line 24, characters 3-9:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 26, characters 3-16:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 28, characters 3-25:
This value is readonly, its properties cannot be modified (Typing[4409])
File "nested_prop_multifile.php", line 29, characters 3-25:
This value is readonly, its properties cannot be modified (Typing[4409])
